@@ -205,14 +205,14 @@ public:
  */
 class Frames_actor_action : public Actor_action
 	{
-	char *frames;			// List to go through (a -1 means to
+	signed char *frames;		// List to go through (a -1 means to
 					//   leave frame alone.)
 	int cnt;			// Size of list.
 	int index;			// Index for next.
 	int speed;			// Frame delay in 1/1000 secs.
 	Game_object *obj;		// Object to animate
 public:
-	Frames_actor_action(char *f, int c, int spd = 200, Game_object *o = 0);
+	Frames_actor_action(signed char *f, int c, int spd = 200, Game_object *o = 0);
 	virtual ~Frames_actor_action()
 		{ delete [] frames; }
 					// Handle time event.
