@@ -1,3 +1,7 @@
+2003-12-16    <jeff@mini.nerble.net>
+
+	* Applied Debian signed-char patch.
+
 2003-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* docs/xml/*: updated .xsl's to indent config file examples
 
